# BotNarezchik

./: .gitignore  Cargo.toml  README.md  concat.txt  index.js  introgen.js  package-lock.json  package.json  ui.glade
backend/: index.js  package-lock.json  package.json  server.js  utils.js
frontend/: README.md  package-lock.json  package.json  vue.config.js
frontend/src/: main.js
frontend/src/views/: Home.vue  SelectComponent.vue
src/: main.rs
