[package]
name = "bot_narezchik"
version = "0.1.0"
authors = ["Iaiao <err266228@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rvk = "0.19.0"
tokio = { version = "0.2", features = [ "macros" ] }
serde = { version = "1.0.118", features = [ "derive" ] }
log = "0.4.11"
simple_logger = "1.11.0"